--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/btnStop"
+        android:id="@+id/btn_Stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Stop"
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="0.366" />
 
     <Button
-        android:id="@+id/btnStart"
+        android:id="@+id/btn_Start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start"
